--- a/FluteApp/.classpath
+++ b/FluteApp/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="/home/orifanne/git/FluteApp/FluteApp/libs/android-support-v4.jar"/>
 	<classpathentry kind="lib" path="/home/orifanne/git/FluteApp/FluteApp/libs/commons-math3-3.2.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="/home/orifanne/git/FluteApp/FluteApp/libs/appcompat_v7.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
